# click

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  config.json  elter.ps1  elter.sh  readme.MD
.github/workflows/: release.yml
cmake/: CPM.cmake
src/: common.hpp  main.cpp
src/config/: config.cpp  config.hpp
src/gui/: gui.cpp  gui.hpp
src/input/: input.cpp  input.hpp
